# swagger2jsonschema

./: .gitignore  Dockerfile  Makefile  README.md  api.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: codeql.yml  main.yml
doc/api/: api.yaml
src/fixtures/kubernetes/: swagger.json
src/fixtures/kubernetes/schemas/: _definitions.json  all.json  pod-v1.json
src/fixtures/oasv3/schemas/: all.json  error.json  pet.json  pets.json
src/openapi2jsonschema/: command.py  test_command.py  util.py
src/swagger2jsonschema/: util.py
