[build-system]
requires = ["setuptools >= 59.6"]
build-backend = "setuptools.build_meta"

[project]
name = "swagger2jsonschema"
version = "0.1.2"
requires-python = ">= 3.10"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.dev = { file = ["requirements-dev.txt"] }

[project.scripts]
swagger2jsonschema = "swagger2jsonschema.command:default"

[tool.pip-tools]
quiet = true
header = false
generate-hashes = false

[tool.isort]
profile = "black"
